<resources>
    <string name="app_name">CIC Labs India</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="share_pdf">Share PDF</string>
    <string name="share_excel">Share Excel</string>
    <string name="more">More</string>
    <string name="document_type">Document Type</string>
    <string name="invoice_no">Invoice No.</string>
    <string name="shipper_name_uppercase">SHIPPER NAME</string>
    <string name="shipper_name_lowercase">Shipper Name</string>
    <string name="xx_xx_xxxx_xx_xx">xx/xx/xxxx xx:xx</string>
    <string name="new_draft">New Draft</string>
    <string name="new_certificate">New Certificate</string>
    <string name="new_doc">New Doc</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="excel_successfully_created_in">Excel successfully created in</string>
    <string name="internal_storage_documents_folder">Internal Storage —> Documents folder</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="capture_using_camera">Capture using Camera</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="pdf">PDF</string>
    <string name="excel">Excel</string>
    <string name="last_edited_xx_xx_xxxx_xx_xx">Last edited: xx/xx/xxxx xx:xx</string>
    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="report_no">Report No.</string>
    <string name="certificate_no">Certificate No.</string>
    <string name="shipper_gst_no">Shipper GST No.</string>
    <string name="shipper_fax">Shipper FAX</string>
    <string name="shipper_telephone_no">Shipper Telephone No.</string>
    <string name="shipper_address">Shipper Address</string>
    <string name="notify_name">Notify Name</string>
    <string name="notify_address">Notify Address</string>
    <string name="notify_telephone_no">Notify Telephone No.</string>
    <string name="notify_fax">Notify FAX</string>
    <string name="description_of_goods">Description of Goods</string>
    <string name="contract_no">Contract No.</string>
    <string name="place_of_inspection">Place of Inspection</string>
    <string name="date_of_inspection">Date of Inspection</string>
    <string name="port_of_discharge">Port of Discharge</string>
    <string name="marking_of_bag">Marking of bag</string>
    <string name="upload">Upload</string>
    <string name="total_net_weight">Total Net Weight</string>
    <string name="total_tare_weight">Total Tare Weight</string>
    <string name="total_gross_weight">Total Gross Weight</string>
    <string name="total_no_of_bags">Total no. of bags</string>
    <string name="category">Category</string>
    <string name="check_parameter">Check Parameter</string>
    <string name="specification_in_parts_as_per_buyer">Specification (in parts) as per buyer</string>
    <string name="specification_as_per_buyer">Specification as per buyer</string>
    <string name="test_result">Test Result</string>
    <string name="extra_well_milled">Extra well milled</string>
    <string name="container_no">Container no.</string>
    <string name="container_size">Container size</string>
    <string name="number_of_bags">Number of bags</string>
    <string name="condition">Condition</string>
    <string name="submit">Submit</string>
    <string name="conclusion">Conclusion</string>
    <string name="weight">Weight</string>
    <string name="packing">Packing</string>
    <string name="quality_statement">Quality Statement</string>
    <string name="cleanliness_statement">Cleanliness Statement</string>
    <string name="consignee_address">Consignee Address</string>
    <string name="consignee_name">Consignee Name</string>
    <string name="final_destination">Final Destination</string>
    <string name="port_of_loading">Port of Loading</string>
    <string name="b_n_no">B/N No.</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="open">Open</string>
    <string name="image_of_marking_of_bag">Image of marking of bag</string>
</resources>