<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350sp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingVertical="20sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:fontFamily="@font/signika_medium"
        android:text="@string/open"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/open_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:background="@drawable/icon_pdf"
                android:contentDescription="@string/pdf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika_medium"
                android:text="@string/pdf"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/open_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:background="@drawable/icon_excel"
                android:contentDescription="@string/excel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika_medium"
                android:text="@string/excel"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>